infrastructure/ceph/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph-dashboard-https
  namespace: rook-ceph
spec:
  parentRefs:
  - name: crulabs-gateway
    sectionName: websecure
    namespace: gateway-system
  hostnames:
  - "ceph-dashboard.crulabs.intern"
  rules:
  - matches:
    - path: 
        value: "/"
        type: PathPrefix
    backendRefs:
    - name: rook-ceph-mgr-dashboard
      port: 700
